@@ -118,6 +118,9 @@ Added
 - New `QUTE_VERSION` variable for userscripts, which can be used to read
   qutebrowser's version.
 - New "Copy URL" entry in the context menu for downloads.
+- New `:bookmark-list` command which lists all bookmarks/quickmarks. The
+  corresponding `qute://bookmarks` URL already existed since v0.8.0, but it was
+  never exposed as a command.
 - New userscripts:
   * `kodi` to play videos in Kodi
   * `qr` to generate a QR code of the current URL
